# PhaseScrambledCorrelations

./: .buildinfo  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  benchmark_timeseries.py  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml
PhaseScrambledCorrelations/: __init__.py  ar_processes.py  correlations.py  fft_bootstrap.py  version.py
PhaseScrambledCorrelations/tests/: test_ar_processes.py  test_phase_scrambled_corr.py
SpectralCorr/: __init__.py  ar_processes.py  correlations.py  deprecated.py  fft_bootstrap.py  fft_utils.py  plotting.py  timeseries.py  validation.py  version.py
SpectralCorr/tests/: test_align_at_maximum_correlation.py  test_ar_processes.py  test_correlation.py  test_cross_correlation.py  test_notebook_compatibility.py  test_phase_scrambled_corr.py  test_xarray_interface.py
_modules/: index.html
_modules/phase_scrambled_corr/: correlations.html  example_time_series.html  fft_utils.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/phase_scrambled_corr/: index.rst.txt
_sources/autoapi/phase_scrambled_corr/correlations/: index.rst.txt
_sources/autoapi/phase_scrambled_corr/example_time_series/: index.rst.txt
_sources/autoapi/phase_scrambled_corr/fft_utils/: index.rst.txt
autoapi/: index.html
autoapi/phase_scrambled_corr/: index.html
autoapi/phase_scrambled_corr/correlations/: index.html
autoapi/phase_scrambled_corr/example_time_series/: index.html
autoapi/phase_scrambled_corr/fft_utils/: index.html
docs/: Makefile  conf.py  example.ipynb  make.bat
notebook_examples/: AR1_example.ipynb  AR1_lagged_example.ipynb
notebooks/: AR1_example.ipynb  AR1_lagged_example.ipynb
phase_scrambled_corr/: __init__.py  ar_processes.py  correlations.py  fft_utils.py  timeseries.py  version.py
phase_scrambled_corr/tests/: test_phase_scrambled_corr.py
src/phase_scrambled_corr/: __init__.py  correlations.py  example_time_series.py  fft_utils.py  phase_scrambled_corr.py
tests/: test_phase_scrambled_corr.py
