[tool.poetry]
name = "phase_scrambled_corr"
version = "0.1.0"
description = "This module implements phase randomization surrogates and cross-correlation analysis following Ebisuzaki (1997)."
authors = ["Anthony Meza"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
matplotlib = "^3.10.3"
scipy = "^1.16.0"
statsmodels = "^0.14.5"
numpy = "^2.3.1"
pandas = "^2.3.1"
xarray = "^2025.7.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
sphinx = "^8.2.3"
myst-nb = "^1.3.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
