[metadata]
name = PhaseScrambledCorrelations
author = Anthony Meza
author_email = ameza@mit.edu
description = Phase randomization surrogates for cross-correlation significance testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anthonymeza/phase_scrambled_corr
project_urls = 
    Bug Tracker = https://github.com/anthonymeza/phase_scrambled_corr/issues
    Documentation = https://anthonymeza.github.io/phase_scrambled_corr
    Source Code = https://github.com/anthonymeza/phase_scrambled_corr
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    matplotlib>=3.6.0
    statsmodels>=0.14.0
    pandas>=2.0.0
    xarray>=2023.1.0
    tqdm>=4.65.0

[options.packages.find]
exclude =
    tests*
    docs*
    notebooks*

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    docs/,
    build/,
    dist/,
    .eggs/,
    *.egg-info/,
    .tox/,
    .coverage,
    htmlcov/,
    .pytest_cache/